--- a/resources/html/User/player/player.css
+++ b/resources/html/User/player/player.css
@@ -11,7 +11,7 @@ body {
   text-align: center;
   background-image: url('player.jpg');
   background-size: 100% auto;
-  font-family: xiuxain;
+  font-family: xiuxian;
 }
 .user_top {
   display:grid;
