--- a/resources/html/User/warehouse/warehouse.css
+++ b/resources/html/User/warehouse/warehouse.css
@@ -1,146 +1,151 @@
 @font-face {
-	font-family:"xiuxian";
+	font-family: "xiuxian";
 	src: url('../../../font/_GBK.TTF');
 	font-weight: normal;
 	font-style: normal;
-  }
-  
-  body {
+}
+
+body {
 	width: 100%;
 	margin: auto;
 	text-align: center;
 	background-image: url('warehouse.jpg');
 	background-size: 100% auto;
 	font-family: xiuxian;
-  }
-  
-  .user_top {
-	display:grid;
-	grid-template-columns:auto auto auto;
+}
+
+.user_top {
+	display: grid;
+	grid-template-columns: auto auto auto;
 	padding: 20px;
 	margin: 40px;
 	background-color: rgba(19, 21, 22, 0.486);
 	border-radius: 100px;
-  }
-  
-  .user_top_img_bottom {
+}
+
+.user_top_img_bottom {
 	background-image: url("../../../img/player/user_state.png");
 	background-size: 100% 100%;
 	width: 320px;
 	height: 320px;
 	margin: auto;
-  }
-  
-  
-  .user_top_img {
+}
+
+
+.user_top_img {
 	width: 186px;
 	height: 186px;
 	border-radius: 100px;
 	margin: auto;
 	margin-top: 62px;
-  }
-  
-  .user_top_left {
+}
+
+.user_top_left {
 	text-align: left;
 	margin: auto;
-  }
-  
-  .user_top_right {
+}
+
+.user_top_right {
 	height: 100%;
 	width: 100%;
-  }
-  
-  .user_top_right_font0{
+}
+
+.user_top_right_font0 {
 	font-size: 25px;
 	color: rgb(255, 255, 255);
 	padding: 10px;
-	border-top-right-radius:25px;
-	border-top-left-radius:25px;
+	border-top-right-radius: 25px;
+	border-top-left-radius: 25px;
 	background-color: rgba(19, 21, 22, 0.842);
-  
-	
-  }
-  
-  .user_top_right_font1{
-	font-size: 25px;
-	color: rgb(255, 255, 255);
-	padding: 10px;
-	background-color: rgba(19, 21, 22, 0.563);
-	display:grid;
-	grid-template-columns:auto auto auto;
-  }
-  
-  .user_top_right_font{
+}
+
+.user_top_right_font {
 	font-size: 25px;
 	color: rgb(255, 255, 255);
 	padding: 10px;
 	background-color: rgba(19, 21, 22, 0.448);
-	display:grid;
-	grid-template-columns:auto auto auto;
-  }
-  
-  .user_top_right_font2{
+}
+
+.user_top_right_font1 {
 	font-size: 25px;
 	color: rgb(255, 255, 255);
 	padding: 10px;
-	border-bottom-right-radius:25px;
-	border-bottom-left-radius:25px;
-	background-color: rgba(19, 21, 22, 0.666);
-	display:grid;
-	grid-template-columns:auto auto auto;
-	margin-bottom: 10px;
-  }
-  
-  .use_data {
-	padding-bottom: 20px;
-  }
-  
-  .user_font {
-	text-align: left;
-	margin: 9px;
-	font-size: 25.6px;
-	padding: 15px;
-	padding-left: 60px;
-	font-weight: 600;
+	background-color: rgba(19, 21, 22, 0.563);
+}
+
+.user_top_right_font2 {
+	font-size: 25px;
 	color: rgb(255, 255, 255);
+	padding: 10px;
+	border-bottom-right-radius: 25px;
+	border-bottom-left-radius: 25px;
+	background-color: rgba(19, 21, 22, 0.666);
+	margin-bottom: 10px;
+}
+
+.user_bottom1 {
 	border-radius: 20px;
-	background-color: rgba(19, 21, 22, 0.486);
-  }
-  
-  .gonfa{
-	display: flex;
-	flex-wrap: wrap;
-  }
-  
-  .gonfa2{
-	display: flex;
-	flex-grow: 2;
-	width: 33.33%;
-	box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
-  }
-  
-  
-  .user_bottom0 {
-	padding-top: 80px;
+	width: 90%;
+	margin: auto;
+}
+
+.user_data {
 	padding-bottom: 20px;
-	border-radius: 20px;
-	width: 90%;
-	height: 380px;
-	margin: auto;
-  }
-  
-  
-  
-  .user_bottom1 {
-	border-radius: 20px;
-	width: 90%;
-	margin: auto;
-  }
-  
-  
-  .user_bottom2 {
-	border-radius: 20px;
-	width: 90%;
-	margin: auto;
-	height: 20px;
-  }
+}
+
+.item_name {
+	font-size: 25px;
+	color: rgb(255, 255, 255);
+	padding: 10px;
+	border-top-right-radius: 25px;
+	border-top-left-radius: 25px;
+	background-color: rgba(19, 21, 22, 0.842);
+}
+
+.equipment1 {
+	font-size: 25px;
+	color: rgb(255, 255, 255);
+	padding: 10px;
+	background-color: rgba(19, 21, 22, 0.563);
+	display: grid;
+	grid-template-columns: 33% 33% 33%;
+}
+
+.equipment2 {
+	font-size: 25px;
+	color: rgb(255, 255, 255);
+	padding: 10px;
+	background-color: rgba(19, 21, 22, 0.563);
+	display: grid;
+	grid-template-columns: 33% 33% 33%;
+}
+
+.danyao {
+	font-size: 25px;
+	color: rgb(255, 255, 255);
+	padding: 10px;
+	background-color: rgba(19, 21, 22, 0.563);
+	display: grid;
+	grid-template-columns: 33% 33% 33%;
+}
+
+.gongfa {
+	font-size: 25px;
+	color: rgb(255, 255, 255);
+	padding: 10px;
+	background-color: rgba(19, 21, 22, 0.448);
+	display: grid;
+	grid-template-columns: 100%;
+}
+
+.price {
+	font-size: 25px;
+	color: rgb(255, 255, 255);
+	padding: 10px;
+	border-bottom-right-radius: 25px;
+	border-bottom-left-radius: 25px;
+	background-color: rgba(19, 21, 22, 0.666);
+	display: grid;
+	grid-template-columns: 50% 50%;
+	margin-bottom: 10px;
+}
