修改背包仓库相关命名

--- a/resources/html/User/backpack/backpack.css
+++ b/resources/html/User/backpack/backpack.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
   margin: auto;
   text-align: center;
-  background-image: url('najie.jpg');
+  background-image: url('backpack.jpg');
   background-size: 100% auto;
   font-family: xiuxian;
 }
