--- a/resources/html/User/manual/manual.css
+++ b/resources/html/User/manual/manual.css
@@ -6,124 +6,58 @@
 }
 
 body {
-  width: 100%;
-  text-align: center;
+  margin: 0;
+  padding: 60px 50px 15px 50px;
   background-image: url('./manual.jpg');
   background-size: 100% auto;
   font-family: xiuxian;
 }
 
-.user_top {
-  display: grid;
-  padding: 20px;
-  grid-template-columns: auto auto;
-  background-color: rgba(19, 21, 22, 0.486);
-  margin: 40px;
-  border-radius: 100px;
+.info-panel {
+  position: relative;
+  padding: 10px 10px 20px 10px;
+  background-color: rgba(19, 21, 22, 0.7);
+  border-radius: 30px;
+  margin: 60px 100px 20px 100px;
+  color: white;
 }
-
-.user_top_img_bottom {
-  background-image: url("../../..//img/player/user_state.png");
+.avatar {
+  background-image: url("../../../img/player/avatar_background.png");
   background-size: 100% 100%;
-  width: 320px;
-  height: 320px;
+  width: 500px;
+  height: 200px;
+  position: absolute;
+  top: -80px;
+  left: -90px;
+}
+.avatar img {
+  position: absolute;
+  border-radius: 50%; 
+  width: 20%;
+  height: 50%;
+  left: 10.7%;
+  top: 27.9%;
+}
+.avatar div:nth-child(2) {
+  position: absolute;
+  left: 39%;
+  top: 32%;
+}
+.avatar div:nth-child(3) {
+  position: absolute;
+  left: 39%;
+  top: 48%;
+}
+.info-list {
   margin: auto;
-}
-
-
-.user_top_img {
-  width: 186px;
-  height: 186px;
-  border-radius: 100px;
-  margin: auto;
-  margin-top: 62px;
-}
-
-.user_top_left {
-  text-align: left;
-  margin: auto;
-}
-
-.user_top_right {
-  height: 100%;
-  width: 100%;
-}
-
-.user_top_right_font0 {
-  font-size: 25px;
-  color: #daf9ff;
-  padding: 10px;
-  border-top-right-radius: 25px;
-  border-top-left-radius: 25px;
-  background-color: rgba(19, 21, 22, 0.842);
-}
-
-.user_top_right_font1 {
-  font-size: 25px;
-  color: rgb(255, 255, 255);
-  padding: 10px;
-  background-color: rgba(19, 21, 22, 0.563);
+  margin-top: 70px;
+  width: 75%;
   display: grid;
-  grid-template-columns: auto auto auto;
+  row-gap: 10px;
 }
-
-.user_top_right_font {
-  font-size: 25px;
-  color: rgb(255, 255, 255);
-  padding: 10px;
-  background-color: rgba(19, 21, 22, 0.448);
-  display: grid;
-  grid-template-columns: auto auto auto;
-}
-
-.user_top_right_font2 {
-  font-size: 25px;
-  color: #daf9ff;
-  padding: 10px;
-  border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  background-color: rgba(19, 21, 22, 0.666);
-  display: grid;
-  grid-template-columns: auto auto auto;
-  margin-bottom: 10px;
-}
-
-.user_data {
-  margin:5px 20px 5px 20px;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  display: grid;
-  grid-template-columns: 50% 50%;
-}
-
-.manual {
-  margin:5px 20px 5px 20px;
-}
-
-.manual_top {
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  background-color: rgba(19, 21, 22, 0.852);
-  height: 10px;
-}
-
-.manual_mid {
-  font-size: 25px;
-  color: #daf9ff;
-  background-color: rgba(19, 21, 22, 0.225);
-  display: grid;
-  grid-template-columns: 50% 50%;
-}
-
-.manual_bottom {
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 25px;
-  background-color: rgba(19, 21, 22, 0.748);
-  height: 10px;
-}
-
-.user_bottom1 {
-  margin: 40px;
-  border-radius: 100px;
-  background-color: rgba(19, 21, 22, 0.486);
+.info-item {
+  display: flex;
+  text-align: center;
+  line-height: 40px;
+  justify-content: space-evenly;
 }
