--- a/resources/html/User/skill/skill.css
+++ b/resources/html/User/skill/skill.css
@@ -7,9 +7,10 @@
 
 body {
   margin: 0;
+  width: 600px;
   padding: 60px 50px 15px 50px;
   background-image: url('./skill.jpg');
-  background-size: 100% auto;
+  background-size: 700px auto;
   font-family: xiuxian;
 }
 
@@ -18,8 +19,9 @@ body {
   padding: 10px 10px 20px 10px;
   background-color: rgba(19, 21, 22, 0.7);
   border-radius: 30px;
-  margin: 60px 100px 20px 100px;
+  margin: 40px 20px 20px 70px;
   color: white;
+  font-size: 20px;
 }
 .avatar {
   background-image: url("../../../img/player/avatar_background.png");
@@ -41,7 +43,7 @@ body {
 .avatar div:nth-child(2) {
   position: absolute;
   left: 39%;
-  top: 32%;
+  top: 31%;
 }
 .avatar div:nth-child(3) {
   position: absolute;
