--- a/plugins/xiuxian-plugin/resources/html/shop/shop.css
+++ b/plugins/xiuxian-plugin/resources/html/shop/shop.css
@@ -15,31 +15,15 @@ body {
 }
 
 .user_top {
-  grid-template-columns: auto auto auto;
-  padding: 15px;
-  margin: 40px;
-  background-image: linear-gradient(to bottom, rgb(19, 21, 22, 0.9), rgba(19, 21, 22, 0.486));
-  border-radius: 50px;
-  color: white;
-}
-
-.user_top h1 {
+  background-image: url(banner.png);
+  background-size: 100% 100%;
+  margin: 20px auto;
+  width: 600px;
   font-size: 40px;
-  line-height: 50px;
-  margin: 5px 0;
-}
-
-.user_help {
-  display: grid;
-  grid-template-columns: 100px 190px;
-  grid-row-gap: 8px;
-  margin-top: -30px;
-  justify-items: start;
-  justify-content: center;
-  background-image: none;
-  background-color: rgba(19, 21, 22, 0.6);
-  padding-left: 80px;
-  font-size: 20px
+  font-weight: 900;
+  line-height: 140px;
+  color: cornsilk;
+  text-shadow: 2px 2px 4px black, -1px -1px 2px white;
 }
 
 .user_top_left {
