新增快捷指令帮助

--- a/resources/html/help/help.css
+++ b/resources/html/help/help.css
@@ -159,6 +159,61 @@ body {
 .help-icon_59{background-position:-400px -250px}
 .help-icon_60{background-position:-450px -250px}
 
+.help-icon_61{background-position:-0px -300px}
+.help-icon_62{background-position:-50px -300px}
+.help-icon_63{background-position:-100px -300px}
+.help-icon_64{background-position:-150px -300px}
+.help-icon_65{background-position:-200px -300px}
+.help-icon_66{background-position:-250px -300px}
+.help-icon_67{background-position:-300px -300px}
+.help-icon_68{background-position:-350px -300px}
+.help-icon_69{background-position:-400px -300px}
+.help-icon_70{background-position:-450px -300px}
+
+.help-icon_71{background-position:-0px -350px}
+.help-icon_72{background-position:-50px -350px}
+.help-icon_73{background-position:-100px -350px}
+.help-icon_74{background-position:-150px -350px}
+.help-icon_75{background-position:-200px -350px}
+.help-icon_76{background-position:-250px -350px}
+.help-icon_77{background-position:-300px -350px}
+.help-icon_78{background-position:-350px -350px}
+.help-icon_79{background-position:-400px -350px}
+.help-icon_80{background-position:-450px -350px}
+
+.help-icon_81{background-position:-0px -400px}
+.help-icon_82{background-position:-50px -400px}
+.help-icon_83{background-position:-100px -400px}
+.help-icon_84{background-position:-150px -400px}
+.help-icon_85{background-position:-200px -400px}
+.help-icon_86{background-position:-250px -400px}
+.help-icon_87{background-position:-300px -400px}
+.help-icon_88{background-position:-350px -400px}
+.help-icon_89{background-position:-400px -400px}
+.help-icon_90{background-position:-450px -400px}
+
+.help-icon_91{background-position:-0px -450px}
+.help-icon_92{background-position:-50px -450px}
+.help-icon_93{background-position:-100px -450px}
+.help-icon_94{background-position:-150px -450px}
+.help-icon_95{background-position:-200px -450px}
+.help-icon_96{background-position:-250px -450px}
+.help-icon_97{background-position:-300px -450px}
+.help-icon_98{background-position:-350px -450px}
+.help-icon_99{background-position:-400px -450px}
+.help-icon_100{background-position:-450px -450px}
+
+.help-icon_101{background-position:-0px -500px}
+.help-icon_102{background-position:-50px -500px}
+.help-icon_103{background-position:-100px -500px}
+.help-icon_104{background-position:-150px -500px}
+.help-icon_105{background-position:-200px -500px}
+.help-icon_106{background-position:-250px -500px}
+.help-icon_107{background-position:-300px -500px}
+.help-icon_108{background-position:-350px -500px}
+.help-icon_109{background-position:-400px -500px}
+.help-icon_110{background-position:-450px -500px}
+
 .help-title {
   display: block;
   color: #daf9ff;
