--- a/plugins/easy-command/resources/html/help/help.css
+++ b/plugins/easy-command/resources/html/help/help.css
@@ -34,11 +34,12 @@ body {
   border-bottom: none;
 }
 .cmd-box > div:nth-child(1) {
+  font-weight: bold;
   font-size: 16px;
 }
 .cmd-box > div:nth-child(2) {
   padding-left: 1.5em;
   text-indent: 1.5em;
-  font-size: 14px;
+  font-size: 15px;
   margin-top: 8px;
 }
