功法界面新增钻研度

--- a/resources/html/User/manual/manual.css
+++ b/resources/html/User/manual/manual.css
@@ -56,6 +56,6 @@ body {
   width: 75%;
   display: grid;
   row-gap: 10px;
-  grid-template-columns: auto auto;
-  justify-content: space-around;
+  grid-template-columns: auto auto auto;
+  justify-content: space-between;
 }
